chore: update env